Closed Bug 354307 Opened 19 years ago Closed 19 years ago

who frees newInterface if new nsProxyObject::LockedFind fails?

Categories

(Core :: XPCOM, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: benjamin)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

i think this ownership model is fragile.
Attachment #250870 - Flags: review?(timeless)
Attachment #250870 - Flags: review?(timeless) → review+
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: