Bug 354307 - newInterface not freed if nsProxyObject::LockedFind fails, r=timeless